oss-lab/charts/ingress_kong_fspiop.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fspiop
  annotations:
    kubernetes.io/ingress.class: kong
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    konghq.com/plugins: fspiop-rewrite
spec:
  rules:
    - http:
        paths:
          - path: /api/fspiop/(participants.*)
            backend:
              serviceName: mojaloop-account-lookup-service
              servicePort: 80
          - path: /api/fspiop/(parties.*)
            backend:
              serviceName: mojaloop-account-lookup-service
              servicePort: 80
          - path: /api/fspiop/(transactionRequests.*)
            backend:
              serviceName: mojaloop-transaction-requests-service
              servicePort: 80
          - path: /api/fspiop/(authorizations.*)
            backend:
              serviceName: mojaloop-transaction-requests-service
              servicePort: 80
          - path: /api/fspiop/(quotes.*)
            backend:
              serviceName: mojaloop-quoting-service
              servicePort: 80
          - path: /api/fspiop/(transfers.*)
            backend:
              serviceName: mojaloop-ml-api-adapter-service
              servicePort: 80
          # Example - for testing out rewrite rules
          - path: /api/bar/(participants.*)
            backend:
              serviceName: echo
              servicePort: 80
---
# Ingresses for Kong API Gateway to talk to the FSPIOP API
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fspiop
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: fspiop-rewrite-health
spec:
  rules:
    - http:
        paths:
          - path: /api/admin/participants/health
            backend:
              serviceName: mojaloop-account-lookup-service
              servicePort: 80
          - path: /api/admin/parties/health
            backend:
              serviceName: mojaloop-account-lookup-service
              servicePort: 80
          - path: /api/admin/transactionRequests/health
            backend:
              serviceName: mojaloop-transaction-requests-service
              servicePort: 80
          - path: /api/admin/authorizations/health
            backend:
              serviceName: mojaloop-transaction-requests-service
              servicePort: 80
          - path: /api/admin/quotes/health
            backend:
              serviceName: mojaloop-quoting-service
              servicePort: 80
          - path: /api/admin/transfers/health
            backend:
              serviceName: mojaloop-ml-api-adapter-service
              servicePort: 80
