oss-lab/charts/ingress_simulators.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: simulators
  annotations:
    kubernetes.io/ingress.class: kong
    # konghq.com/strip-path: "true"
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    konghq.com/plugins: simulators-rewrite
spec:
  rules:
    - host: payeefsp-backend.beta.moja-lab.live
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: mojaloop-sim-payeefsp-backend
              servicePort: 3003
